--- a/index.html
+++ b/index.html
@@ -5,16 +5,32 @@
     <meta charset="utf-8">
     <title>Excursion</title>
   </head>
-  <body>
-    <div class="black">
 
+  <body class="black">
 
+    <div>
       <h1>Discover hidden places in the world around you</h1>
+
+      <p><a class="link" href="#">Download Excursion (Coming soon!)</a></p>
+
       <p>
-        <a class="link" href="#">Download Excursion (Coming soon!)</a>
+        <video autoplay="" muted="" loop="">
+          <source src="resources/videos/excursion.mp4" type="video/mp4">
+        </video>
       </p>
 
-  </div>
+      <h2>Your personal travel guide</h2>
 
+      <p class="info">Excursion remembers places you like, and recommends new points of interest around you.</p>
+
+      <p><img src="resources/images/camp.jpg" alt="Camp at night"></p>
+
+      <p><img src="resources/images/phone.png" alt="Mobile Phone"></p>
+
+      <h2>Coming soon for iPhone and Android</h2>
+
+      <p><a class="link" href="#">Download Excursion (Coming soon!)</a></p>
+      <p class="footnote">© Excursion</p>
+    </div>
   </body>
 </html>
